--- a/LSTM_MODEL.ipynb
+++ b/LSTM_MODEL.ipynb
@@ -10,6 +10,20 @@
         "id": "k3Ns17c4qlwa",
         "outputId": "560bcee5-1972-4daa-edf4-62b473cf9490"
       },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
