--- a/lstm_model.ipynb
+++ b/lstm_model.ipynb
@@ -11,18 +11,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "yp3Fb-gque3I"
-      },
-      "outputs": [],
-      "source": [
-        "import sys\n",
-        "sys.path.append('/content/drive/MyDrive/LSTM')"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 35,
       "metadata": {
         "colab": {
@@ -92,7 +80,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/LSTM/sentiment.csv', sep =';', encoding = 'latin1', names = ('text', 'sentiment'))"
+        "df = pd.read_csv('sentiment.csv', sep =';', encoding = 'latin1', names = ('text', 'sentiment'))"
       ]
     },
     {
@@ -1162,7 +1150,7 @@
       "source": [
         "# save the tokenizer.pkl\n",
         "\n",
-        "with open('/content/drive/MyDrive/LSTM/tokenizer.pkl', 'wb') as f:\n",
+        "with open('tokenizer.pkl', 'wb') as f:\n",
         "    pickle.dump(tokenizer, f)"
       ],
       "metadata": {
@@ -1587,7 +1575,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.save('/content/drive/MyDrive/LSTM/model.keras')"
+        "model.save('model.h5')"
       ],
       "metadata": {
         "id": "wfIpqhSnxwWi"
