--- a/lstm-model.ipynb
+++ b/lstm-model.ipynb
@@ -111,7 +111,7 @@
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/LSTM/sentiment.csv', sep =';', encoding = 'latin1', names = ('text', 'sentiment'))"
+        "df = pd.read_csv('/sentiment.csv', sep =';', encoding = 'latin1', names = ('text', 'sentiment'))"
       ]
     },
     {
