--- a/lstm-model.ipynb
+++ b/lstm-model.ipynb
@@ -1606,7 +1606,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = load_model(\"/content/drive/MyDrive/LSTM/model.keras\")"
+        "model = load_model(\"/model.keras\")"
       ],
       "metadata": {
         "id": "wfIpqhSnxwWi",
